[B]Version 1.0.4[/B]
- Added live channel streams from LiveStream's plugins community-links repository
- Set default sorting to be by title for drama episodes

[B]Version 1.0.3[/B]

- Created new playlist settings for plugin: 
  To allow users to start playlist from selected listitem 
  Toggle shuffle and repeat modes for playlist

- Created new view settings for plugin: 
  To allow users to set the default view (i.e. media info2, thumbnail etc)  

[B]Version 1.0.2[/B]

- Created new setting for plugin: allow user to change sort order to title across all views 
Note: Since XBMC caches the pages the user has browsed through, users may need to clear the viewmode caches to see the updated sort order on previously accessed pages (by rename files under %AppData%\xbmc\userdata\Database\ViewModes*.db)

[B]Version 1.0.1[/B]

- Updated addon.xml to support Eden

[B]Version 1.0.0[/B]

-Completed Pakee XBMC functionality, testing on Eden Beta1,2. Plugin provides the ability to:
-Browse TV channels, TV shows, movies, actors, fashion, photography, sports, YouTube channels from Pakistan 
-Browse musicians' albums, songs, Facebook albums, news and YouTube channels 
-Allows users to play video, music or image content individually or in "play all in list" mode 
-Allows users to pull any YouTube users playlists, uploaded/favorite videos and playing in "play all in list" mode 
-Supports sorting content by title, duration, uploaded date, view count 
-More info available at http://code.google.com/p/pakee