@@ -8,6 +8,9 @@
     <string id="30023">Playlist: Start playlist at selected video</string>
 
     <string id="30050">Play all</string>
+    <string id="30051">Start slideshow</string>
+    <string id="30052">Requesting photos from Facebook</string>
+    <string id="30053">Searching YouTube</string>
 
     <string id="30100">Default sort order</string>
     <string id="30101">Default</string>
